package elevatorquestion;

public enum Direction {
    UP,
    DOWN
}
